[tool.poetry]
name = "poetr-19"
version = "0.1.0"
description = ""
authors = ["Andreymazo <andreymazo@mail.ru>"]
readme = "README.md"
packages = [{include = "poetr_19"}]

[tool.poetry.scripts]
19day = 'poetr_19.Poetry19day:main'


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
